--- a/views/proyecto_cobro_mensual_view.xml
+++ b/views/proyecto_cobro_mensual_view.xml
@@ -13,7 +13,7 @@
                 <field name="currency_id" invisible="1"/>
                 <field name="year" />
                 <field name="total_to_charge" />
-                <field name="total_paid_dummy" />
+                <field name="total_paid" />
                 <field name="total_balance" />
                 <field name="state" string="Estado"
                     widget="badge"
@@ -80,7 +80,7 @@
                         <group>
                             <field name="currency_id" invisible="1"/>
                             <field name="total_to_charge" readonly="1" />
-                            <field name="total_paid_dummy" readonly="1" />
+                            <field name="total_paid" readonly="1" />
                             <field name="total_balance" readonly="1" />
                         </group>
                     </group>
@@ -98,7 +98,7 @@
                                         options="{'no_create': True, 'no_open': False}" />
 
                                     <field name="amount_total" readonly="1" />
-                                    <field name="amount_balance" readonly="1" />
+                                    <field name="amount_residual" readonly="1" />
 
                                     <field name="move_state"
                                         string="Estado cargo"
