--- a/views/product_template_view.xml
+++ b/views/product_template_view.xml
@@ -1,15 +1,15 @@
-<?xml version="1.0" ?>
+<?xml version="1.0"?>
 
 <odoo>
     <record id="product_template_form_ihnerit_aso" model="ir.ui.view">
         <field name="name">product.template.view.aso.inherited</field>
         <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_only_form_view"/>
+        <field name="inherit_id" ref="product.product_template_only_form_view" />
         <field name="arch" type="xml">
-        <field name="categ_id" position="after">
-            <field name="aso_es_servicio_aso"/>
-            <field name="aso_tipo_servicio" modifiers="{'invisible': [['aso_es_servicio_aso', '=', false]], 'required': [['aso_es_servicio_aso', '=', true]]}"/>
-         </field>
+            <field name="categ_id" position="after">
+                <field name="aso_es_servicio_aso" />             
+                <field name="tipo_servicio_aso_id" invisible="not aso_es_servicio_aso"/>               
+            </field>
         </field>
     </record>
 </odoo>
